# HCM-AI-Challenge-2026

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml  indexes.yaml  models.yaml
notebooks/: 00_colab_setup.ipynb  01_ingest_index.ipynb  02_search_evaluate.ipynb  README.md
scripts/: _cli_common.py  build_pipeline.py  build_text_index.py  build_visual_index.py  check_environment.py  preprocess_videos.py  run_retrieval.py  validate_submission.py
src/hcm_ai/: __init__.py  artifacts.py  cache.py  config.py  contracts.py  environment.py  evaluation.py  exporting.py  profiles.py  runtime.py  validation.py
src/hcm_ai/asr/: __init__.py  providers.py
src/hcm_ai/embeddings/: __init__.py  providers.py
src/hcm_ai/fusion/: __init__.py  normalization.py  rrf.py
src/hcm_ai/indexing/: __init__.py  bm25_store.py  in_memory.py  persistence.py
src/hcm_ai/ingestion/: __init__.py  aic2025.py  alignment.py
src/hcm_ai/ocr/: __init__.py  gemini.py  providers.py
src/hcm_ai/planning/: __init__.py  answering.py  planners.py
src/hcm_ai/preprocessing/: __init__.py  keyframes.py  media.py  shots.py
src/hcm_ai/reranking/: __init__.py  providers.py
src/hcm_ai/retrieval/: __init__.py  service.py
src/hcm_ai/temporal/: __init__.py  beam_search.py
tests/: test_alignment_persistence.py  test_cli_workflow.py  test_core_data.py  test_environment.py  test_exporting_validation.py  test_planning_service.py  test_preprocessing.py  test_retrieval.py  test_runtime_profiles.py
